# k_ghost_io

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  k_ghost_io.cmake
include/: k_ghost_io.h
libs/cjson/: CMakeLists.txt
mock/: k_ghost_io_mock.c  k_ghost_io_mock.h
src/linux/: k_ghost_io.c  k_ghost_io_priv.h
test/: CMakeLists.txt  k_ghost_io_host_mocks.c  k_ghost_io_host_mocks.h  k_ghost_io_test.cpp
